--- a/App3/ChatList.xaml
+++ b/App3/ChatList.xaml
@@ -9,6 +9,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView x:Name="listView" Margin="10" ItemClick="listView_ItemClick" IsItemClickEnabled="True"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="173,220,0,0" VerticalAlignment="Top" Click="button_Click"/>
 
     </Grid>
 </Page>
